// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Object {
  "Constructor": "ProjectEditPage",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "dataLoaded": false,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {},
    "types": Array [],
    "updateProject": [Function],
  },
  "html": "
<ul class=\\"breadcrumb\\">
  <li>
    <a href=\\"/\\" class=\\"\\">Projects
      <!--default-->
    </a>
  </li>
  <!--if-->
  <!--if-->
  <li></li>
</ul>
<!--BreadCrumb-->
<!--breadcrumbs-->
<!--if-->
<!--FlushPageDataLoading-->
<!--if-->
<!--PageContent-->
",
}
`;

exports[`renders correctly 2`] = `
Object {
  "Constructor": "ProjectEditPage",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "dataLoaded": true,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
    "types": Array [],
    "updateProject": [Function],
  },
  "html": "
<ul class=\\"breadcrumb\\">
  <li>
    <a href=\\"/\\" class=\\"\\">Projects
      <!--default-->
    </a>
  </li>
  <li>
    <a href=\\"undefined\\" class=\\"\\">Test
      <!--default-->
    </a>
  </li>
  <!--if-->
  <!--if-->
  <li>Edit</li>
</ul>
<!--BreadCrumb-->
<!--breadcrumbs-->
<!--if-->
<!--ErrorsPanel-->
<div class=\\"project-create-form\\">
  <form>
    <div class=\\"group\\">
      <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
      <label>Name</label>
    </div>
    <div class=\\"group\\">
      <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
      <label>Current Work Directory</label>
    </div>
    <div class=\\"group\\">
      <button type=\\"submit\\"><span>Update</span></button>
    </div>
  </form>
</div>
<!--ProjectForm-->
<!--content-->
<!--if-->
<!--PageContent-->
",
}
`;

exports[`update fail 1`] = `
Object {
  "Constructor": "ProjectEditPage",
  "Options": Object {
    "ID": "widget",
    "containerSelector": "body",
    "dataLoaded": true,
    "dataSaving": false,
    "directives": Object {
      "EventListener": [Function],
      "disabled": [Function],
      "onclick": [Function],
      "oninput": [Function],
      "onload": [Function],
      "onresize": [Function],
      "onscroll": [Function],
      "onselect": [Function],
      "onsubmit": [Function],
      "ref": [Function],
    },
    "errors": Array [
      "Update project fail!",
    ],
    "project": Object {
      "cwd": "/tmp/",
      "id": 1,
      "name": "Test",
    },
    "types": Array [],
    "updateProject": [Function],
  },
  "html": "
<ul class=\\"breadcrumb\\">
  <li>
    <a href=\\"/\\" class=\\"\\">Projects
      <!--default-->
    </a>
  </li>
  <li>
    <a href=\\"undefined\\" class=\\"\\">Test
      <!--default-->
    </a>
  </li>
  <!--if-->
  <!--if-->
  <li>Edit</li>
</ul>
<!--BreadCrumb-->
<!--breadcrumbs-->
<ul class=\\"errors-panel\\">
  <li>Update project fail!</li>
</ul>
<!--if-->
<!--ErrorsPanel-->
<div class=\\"project-create-form\\">
  <form>
    <div class=\\"group\\">
      <input name=\\"name\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
      <label>Name</label>
    </div>
    <div class=\\"group\\">
      <input name=\\"cwd\\" type=\\"text\\" required=\\"\\"><span class=\\"highlight\\"></span><span class=\\"bar\\"></span>
      <label>Current Work Directory</label>
    </div>
    <div class=\\"group\\">
      <button type=\\"submit\\"><span>Update</span></button>
    </div>
  </form>
</div>
<!--ProjectForm-->
<!--content-->
<!--if-->
<!--PageContent-->
",
}
`;
